kubernetes/api-chirpstack.yml
apiVersion: v1
kind: Service
metadata:
  name: api-chirpstack-endpoint
spec:
  selector:
    app: strapi
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8090
---
