kubernetes/mqtt.yml
apiVersion: v1
kind: Service
metadata:
  name: mqtt-endpoint
spec:
  selector:
    app: mqtt
  ports:
    - name: mqtt
      protocol: TCP
      port: 1883
      targetPort: 1883
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mqtt
spec:
  replicas: 1
  serviceName: mqtt-endpoint
  selector:
    matchLabels:
      app: mqtt
  template:
    metadata:
      labels:
        app: mqtt
    spec:
      containers:
        - name: mqtt
          image: eclipse-mosquitto:2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1883
              name: mqtt
          volumeMounts:
            - name: config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
            - name: data
              mountPath: /mosquitto/data
            - name: log
              mountPath: /mosquitto/log
      volumes:
        - name: config
          secret:
            secretName: mqtt-config
        - name: data
          persistentVolumeClaim:
            claimName: mqtt-data-pvc
        - name: log
          persistentVolumeClaim:
            claimName: mqtt-log-pvc
---
