kubernetes/strapi.yml
apiVersion: v1
kind: Service
metadata:
  name: strapi-endpoint
spec:
  selector:
    app: strapi
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 1337
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: strapi
spec:
  replicas: 1
  serviceName: strapi-endpoint
  selector:
    matchLabels:
      app: strapi
  template:
    metadata:
      labels:
        app: strapi
    spec:
      containers:
        - name: strapi
          image: 902637028063.dkr.ecr.ap-southeast-1.amazonaws.com/st-data:1.1.2
          ports:
            - containerPort: 1337
          volumeMounts:
            - name: env
              mountPath: /opt/app/.env
              subPath: .env
      volumes:
        - name: env
          secret:
            secretName: env
